Bug #13556: prevent duplicate fields on CSV on importing agencies